# indian-law-ai

./: .gitignore  LICENSE  package.json  pyproject.toml
backend/: main.py  pipeline.py  test_db.py
backend/agent/: agent_simple.py  agent_tool.py  models.py  prompts.py  tools.py
backend/db/: db.py  models.py  postgre_db.py
backend/routers/: agent_router.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  DefaultThreadScreen.tsx  LoadingChatMessage.tsx  MessageThreadScreen.tsx
frontend/src/types/: index.ts
