[project]
name = "law-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "ddgs>=9.11.2",
    "duckduckgo-search>=8.1.1",
    "fastapi[standard]>=0.135.1",
    "huggingface-hub>=0.36.2",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.14",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.10",
    "langchain-text-splitters>=1.1.1",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.7.2",
    "sentence-transformers>=5.2.3",
    "sqlalchemy>=2.0.46",
]
